2002-06-28  Eric B Blake  <eblake@ee.byu.edu>

	* src/ast.h (shadow_parameter_offset): Delete from here...
	* src/body.cpp (ProcessThisCall, ProcessSuperCall): Ditto.
	* src/bytecode.h (shadow_parameter_offset): ... and move to here,
	to fix bug 3001.
	* src/bytecode.cpp (CompileConstructor, EmitThisInvocation),
	(ByteCode): Ditto.
	* src/symbol.h (VariableSymbol::ContainingType): Add.
	* src/semantic.h: Some formatting improvements, use new method.
	* src/expr.cpp: Ditto.
	(GetAnonymousType):
	* src/symbol.cpp (GetReadAccessConstructor): More of the bug fix.

2002-06-28  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ProcessMOD): Fix bug from incomplete patch on the
	22nd - bug 3006.

2002-06-28  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp: Minor formatting improvements.
	(EmitTryStatement): Emit exception handlers in correct order -
	jikes bug 3003.
	(EmitCheckForNull): Update emitted code to match javac.

2002-06-27  Eric Blake  <ebb9@email.byu.edu>

	* src/symbol.cpp (EnclosingType): Update logic to work for classes
	read from .class file - bug 2995.

2002-06-27  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (CanCastConvert): Don't allow conversion to null
	type - bug 2982.

2002-06-24  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp:
	* src/bytecode.h:
	* src/control.cpp:
	* src/decl.cpp:
	* src/expr.cpp:
	* src/symbol.cpp:
	* src/symbol.h: Fix formatting, comments, and improve some naming
	issues; but no code changes.

2002-06-19  Eric Blake  <ebb9@email.byu.edu>

	* src/control.cpp (ProcessHeaders):
	* src/decl.cpp (ProcessSuperTypeDependences, SetDefaultSuperType),
	(ProcessTypeHeader, CompleteSymbolTable): Fix core dump of Jacks
	test 8.1.4-object-1.

2002-06-18  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (CompileConstructor),
	(GenerateClassAccessMethod): Make compile output decisions based
	on target JVM level, not source JDK level.
	(EmitSwitchStatement): Remove dead code in switch statements -
	followup to patch 279.
