@@ -1,4 +1,9 @@
-2002-06-28  Eric B Blake  <eblake@ee.byu.edu>
+2002-06-28  Eric Blake  <ebb9@email.byu.edu>
+
+	* src/bytecode.cpp (EmitPreUnaryExpression): Fix bug in ! when
+	used in optimized && - bug 3011.
+
+2002-06-28  Eric Blake  <ebb9@email.byu.edu>
 
 	* src/ast.h (shadow_parameter_offset): Delete from here...
 	* src/body.cpp (ProcessThisCall, ProcessSuperCall): Ditto.
